First try of a PixmapRegistry, needs cleanup

--- a/src/libtomahawk/CMakeLists.txt
+++ b/src/libtomahawk/CMakeLists.txt
@@ -285,6 +285,7 @@ IF(QCA2_FOUND)
 ENDIF(QCA2_FOUND)
 
 set( libSources
+    TomahawkImage.cpp
     tomahawksettings.cpp
     sourcelist.cpp
     pipeline.cpp
