Hopefully this is a bit better

--- a/src/libtomahawk/CMakeLists.txt
+++ b/src/libtomahawk/CMakeLists.txt
@@ -421,6 +421,7 @@ set( libSources
 
 set( libHeaders
     tomahawksettings.h
+    TomahawkImage.h
     sourcelist.h
     pipeline.h
     functimeout.h
