Initial implementation of moving VSXu to it's own thread. The implementation currently is a little buggy and still need to take care of certain Synchronization issues.

--- a/src/libtomahawk/CMakeLists.txt
+++ b/src/libtomahawk/CMakeLists.txt
@@ -154,7 +154,8 @@ IF(VSXU_FOUND)
     set(libGuiSources ${libGuiSources} 
                       nowplaying/VSXuWidget.cpp 
                       nowplaying/nowplayingpage.cpp
-                      nowplaying/fftreal/fftreal.cpp)
+                      nowplaying/fftreal/fftreal.cpp
+                      nowplaying/vsxurenderer.cpp)
 ENDIF(VSXU_FOUND)
 
 set( libGuiHeaders
@@ -294,10 +295,13 @@ IF(QCA2_FOUND)
     set( libGuiHeaders ${libGuiHeaders} utils/groovesharkparser.h )
 ENDIF(QCA2_FOUND)
 IF(VSXU_FOUND)
-    set( libGuiHeaders ${libGuiHeaders} nowplaying/VSXuWidget.h nowplaying/nowplayingpage.h)
+    set( libGuiHeaders ${libGuiHeaders} 
+                        nowplaying/VSXuWidget.h
+                        nowplaying/nowplayingpage.h
+                        nowplaying/vsxurenderer.h)
 ENDIF(VSXU_FOUND)
 
-set( libSources
+set( libSources 
     tomahawksettings.cpp
     sourcelist.cpp
     pipeline.cpp
