--- a/src/libtomahawk/CMakeLists.txt
+++ b/src/libtomahawk/CMakeLists.txt
@@ -612,7 +612,7 @@ IF(QCA2_FOUND)
 ENDIF(QCA2_FOUND)
 
 IF(VSXU_FOUND)
-    INCLUDE_DIRECTORIES(${VSXU_INCLUDE_DIRS})
+    INCLUDE_DIRECTORIES(${VSXU_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS})
 ENDIF(VSXU_FOUND)
 
 IF(LIBATTICA_FOUND)
@@ -708,7 +708,7 @@ IF(QCA2_FOUND)
 ENDIF(QCA2_FOUND)
 
 IF(VSXU_FOUND)
-    SET(LINK_LIBRARIES ${LINK_LIBRARIES} ${VSXU_LIBRARIES})
+    SET(LINK_LIBRARIES ${LINK_LIBRARIES} ${VSXU_LIBRARIES} ${OPENGL_LIBRARIES})
 ENDIF(VSXU_FOUND)
 
 IF(LIBATTICA_FOUND)
